--- a/KittyQuest/Assembly-CSharp-vs.csproj
+++ b/KittyQuest/Assembly-CSharp-vs.csproj
@@ -46,9 +46,11 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\CatPunch.cs" />
      <Compile Include="Assets\Climb.cs" />
-     <Compile Include="Assets\ClimbCollide.cs" />
-     <Compile Include="Assets\Moveable.cs" />
+     <Compile Include="Assets\PunchCleanup.cs" />
+     <Compile Include="Assets\Scripts\ClimbCollide.cs" />
+     <Compile Include="Assets\Scripts\Moveable.cs" />
  <Reference Include="Assembly-UnityScript-firstpass">
  <HintPath>C:/School/film3720/Git/Film3720/KittyQuest/Library/ScriptAssemblies/Assembly-UnityScript-firstpass.dll</HintPath>
  </Reference>
