--- a/KittyQuest/Assembly-CSharp.csproj
+++ b/KittyQuest/Assembly-CSharp.csproj
@@ -46,9 +46,11 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\CatPunch.cs" />
      <Compile Include="Assets\Climb.cs" />
-     <Compile Include="Assets\ClimbCollide.cs" />
-     <Compile Include="Assets\Moveable.cs" />
+     <Compile Include="Assets\PunchCleanup.cs" />
+     <Compile Include="Assets\Scripts\ClimbCollide.cs" />
+     <Compile Include="Assets\Scripts\Moveable.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="Assembly-CSharp-firstpass.csproj">
