--- a/KittyQuest/Assembly-CSharp-vs.csproj
+++ b/KittyQuest/Assembly-CSharp-vs.csproj
@@ -46,8 +46,6 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\CameraSwap.cs" />
-     <Compile Include="Assets\CatPunch.cs" />
      <Compile Include="Assets\Climb.cs" />
      <Compile Include="Assets\OVR\Scripts\OVRCameraRig.cs" />
      <Compile Include="Assets\OVR\Scripts\OVRCommon.cs" />
@@ -65,10 +63,12 @@
      <Compile Include="Assets\OVR\Scripts\Util\OVRPlayerController.cs" />
      <Compile Include="Assets\OVR\Scripts\Util\OVRScreenFade.cs" />
      <Compile Include="Assets\OVR\Scripts\Util\OVRUGUI.cs" />
-     <Compile Include="Assets\PunchCleanup.cs" />
+     <Compile Include="Assets\Scripts\CameraSwap.cs" />
+     <Compile Include="Assets\Scripts\CatPunch.cs" />
      <Compile Include="Assets\Scripts\ClimbCollide.cs" />
      <Compile Include="Assets\Scripts\MenuManager.cs" />
      <Compile Include="Assets\Scripts\Moveable.cs" />
+     <Compile Include="Assets\Scripts\PunchCleanup.cs" />
      <Compile Include="Assets\Scripts\Tester.cs" />
      <None Include="Assets\Plugins\donotdelete.txt" />
      <None Include="Assets\Standard Assets\Toon Shading\Sources\Shaders\Toony-Basic.shader" />
