Day 3 almost done, animations not in
Need to talk to Patrick a bit about his switch case and Tri a lot about
how to make the animations go.

--- a/KittyQuest/Assembly-CSharp-vs.csproj
+++ b/KittyQuest/Assembly-CSharp-vs.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
      <Compile Include="Assets\Climb.cs" />
      <Compile Include="Assets\FireAnimation.cs" />
+     <Compile Include="Assets\HitScript.cs" />
      <Compile Include="Assets\OVR\Scripts\ClimbSensor.cs" />
      <Compile Include="Assets\OVR\Scripts\OVRCameraRig.cs" />
      <Compile Include="Assets\OVR\Scripts\OVRCommon.cs" />
